# TrainKit

./: .gitignore  README.md  eslint.config.mjs  forge.config.ts  index.html  package-lock.json  package.json  tsconfig.json  vite.main.config.ts  vite.renderer.config.ts
.github/workflows/: build.yml  ci.yml  release.yml
backend/: .setup_complete  main.py  pyproject.toml
backend/config/: image_formats.py
backend/core/: __init__.py  dependencies.py  exceptions.py  websocket.py
backend/models/: __init__.py  requests.py
backend/routers/: __init__.py  caption.py  rename.py  system.py  upscale.py
backend/service/: base.py  image_captioning.py  image_processing.py  image_rename.py  image_upscaling.py  service_manager.py
backend/tests/: test_image_captioning.py  test_image_processing.py  test_image_rename.py  test_image_upscale.py
backend/tiling/: __init__.py  blend_functions.py  models.py  tile_blender.py  tile_splitter.py
backend/utils/: file_util.py  image_util.py
src/: backend-manager.ts  index.css  logger.ts  main.ts  preload.ts  renderer.tsx  setup-manager.ts  splash.html
src/components/: App.tsx  ErrorBoundary.tsx
src/components/trainkit/: Header.tsx  Navigation.tsx  TitleBar.tsx  index.ts
src/components/trainkit/panels/: caption-panel.tsx  index.ts  logs-panel.tsx  rename-panel.tsx  upscale-panel.tsx
src/components/trainkit/shared/: Button.tsx  CreditsModal.tsx  ImageCompareSlider.tsx  ImagePreview.tsx  Input.tsx  Logo.tsx  ModelStatus.tsx  PanelSkeleton.tsx  Progress.tsx  Textarea.tsx  index.ts
src/lib/: app-state.tsx  config.ts  websocket-context.tsx
src/styles/: globals.css
src/types/: electron.d.ts  index.ts
